# CookingPlanner

./: .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  docker-compose.yml  pre-commit  pyproject.toml  recipes.json  run-backend.sh
.github/workflows/: docker-image.yml
backend/: .gitignore  .pre-commit-config.yaml  .pylintrc  .test.env  Dockerfile  README.md  docker-entrypoint.sh  pyproject.toml  pytest.ini
backend/cookingplanner/: config.py  main.py
backend/cookingplanner/generator/: meal.py  week_generator.py
backend/cookingplanner/models/: database.py  models.py  schema.py
backend/cookingplanner/recipe/: recipe.py  recipe_storage.py
backend/cookingplanner/routers/: auth.py  exceptions.py  profile.py  request_data_model.py
backend/cookingplanner/scraping/: scraping_extractor_strategy.py  scraping_recipe.py
backend/cookingplanner/tests/: test_api.py  test_auth.py  test_generator.py  test_profile.py  test_scraping.py  test_scraping_strategy.py
backend/cookingplanner/tests/api/: test_profile.py
backend/cookingplanner/tests/fixture/: fixture_recipe_storage.py
backend/cookingplanner/tests/recipe/: test_recipe_storage.py
backend/cookingplanner/tests/ressources/: recipes.json
backend/cookingplanner/utils/: password.py  singleton.py
cookingplanner/: conftest.py  main.py
cookingplanner/extractor/: marmitonextractor.py
dish/: main.py
docs/: class_diagram.mdj
front/: .gitignore  README.md  nuxt.config.js  package.json
frontend/: nuxt.config.js
test/: test_recipe.py  test_serializer.py
tests/: test_scraping.py
(+63 files in other folders)
