[tool.poetry]
name = "cookingplanner"
version = "0.1.0"
description = ""
authors = ["Régis Graptin <regis-graptin@sfr.fr>"]

[tool.poetry.dependencies]
python = "^3.8"
pylint = "^2.15.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
