[tool.poetry]
name = "cookingplanner"
version = "0.1.0"
description = ""
authors = ["Régis Graptin <regis-graptin@sfr.fr>"]

[tool.poetry.dependencies]
python = "^3.8"
pylint = "^2.15.9"
pre-commit = "^2.20.0"
bs4 = "^0.0.1"
requests = "^2.28.1"
responses = "^0.22.0"
fastapi = "^0.88.0"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
httpx = "^0.23.1"
pyenchant = "^3.2.2"
pytest = "^7.2.1"
fastapi-login = "^1.8.3"
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
